# arche

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build-and-test.yml  codeql-analysis.yml
include/: CMakeLists.txt
include/arche/: Bitset.hpp  Register.hpp  Register_Clock.hpp  int_literals.hpp
include/exfs/: concepts.hpp  dereferenceable.hpp  referenceable.hpp  static_vector.hpp
include/exfs/iterator/: category_tags.hpp  concepts.hpp  iter_move.hpp  legacy.hpp  operations.hpp  reverse_iterator.hpp  traits.hpp
include/exfs/memory/: storage.hpp
include/exfs/testing/: Regular_Object.hpp
include/exfs/utility/: functions.hpp  pair.hpp
src/: CMakeLists.txt
src/arche/: Register_Clock.hpp  int_literals.hpp
src/arche/concepts/: Register.hpp
src/arche/testing/: Mock_Register.hpp
src/exfs/iterator/: concepts.test.cpp  reverse_iterator.hpp  traits.test.cpp
src/exfs/testing/: Regular_Object.hpp
src/exfs/utility/: functions.hpp  pair.hpp
tests/: CMakeLists.txt  test_Bitset.cpp  test_Register.cpp  test_Register_Clock.cpp  test_int_literals.cpp
tests/exfs/: test_static_vector.cpp
tests/exfs/iterator/: models.hpp  test_category_tags.hpp  test_concepts.cpp  test_legacy.cpp  test_operations.cpp  test_reverse_iterator.cpp  test_traits.cpp
tests/exfs/memory/: test_storage.cpp
tests/exfs/utility/: test_functions.cpp  test_pair.cpp
